Fix extra white space for inline divider

--- a/src/styles.less
+++ b/src/styles.less
@@ -1,5 +1,6 @@
 .divider-inline {
   margin: 0!important;
+  margin-bottom: -1px!important;
 }
 
 .divider-dotted {
